# tensorboard_logger

./: .gitignore  CMakeLists.txt
include/: tensorboard_logger.h
src/: tensorboard_logger.cc
tests/: test_tensorboard_logger.cc
